--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -197,6 +197,7 @@
     "duration_placeholder": "有効期限日数",
     "errors": {
       "amount_minimum": "{amount}より大きい必要があります。",
+      "deposit_gt_balance": "必要なデポジットが残高よりも大きい",
       "duration_gte_payable":
         "有効期間は支払期間と同じか、それよりも長くなければなりません。",
       "maximum_interest_rate": "レートは{maximum}以下の必要があります。",
@@ -228,7 +229,8 @@
     "request": "担保を申請しています。",
     "request_land":
       "{parcel_name}への担保を{parcel_price}価値で申請しようとしています。",
-    "requested": "申請しました。"
+    "requested": "申請しました。",
+    "required_deposit": "必要なデポジット：{deposit}"
   },
   "parcel": {
     "no_description": "説明文未設定",
